--- a/src/app.scss
+++ b/src/app.scss
@@ -5,11 +5,11 @@
 
     .sections{
         width: 100%;
-        height: calc(100vh - 70px);
+        height: 100vh;
         background-color: $mainColor;
         color: $textColor;
         position: relative;
-        top: 70px;
+        
         scroll-behavior: smooth;
         scroll-snap-type: y mandatory;
         scrollbar-width: none; // for firefox
@@ -19,7 +19,7 @@
 
         > *{
             width: 100vw;
-            height: calc(100vh - 70px);
+            height: 100vh;
             scroll-snap-align: start;
         }
 
