--- a/src/components/home/home.scss
+++ b/src/components/home/home.scss
@@ -81,6 +81,12 @@
         margin-bottom: -5px;
     }
   }
+
+  .intro-contact-desc{
+    padding-bottom: 10px;
+    max-width: 55%;
+
+  }
   
   .intro-contact:hover {
     background-color: $lightNavy;
