--- a/src/components/creations/creations.scss
+++ b/src/components/creations/creations.scss
@@ -2,4 +2,57 @@
 
 .creations{
     background-color: $mainColor;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
+
+@media only screen and (min-width: 601px) {
+    .banner {
+        padding: 120px 64px 0px;
+        font-size: 32px;
+        align-self: flex-start;
+    }
+    .container {
+        width: 70%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
+
+        .item {
+            width: 220px;
+            height: 150px;
+            border-radius: 20px;
+            border: 1px solid $textColor;
+            margin: 10px 20px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: $textColor;
+            position: relative;
+            cursor: pointer;
+
+            h3 {
+                position: absolute;
+                font-size: 18px;
+            }
+    
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                z-index: 1;
+            }
+
+            &:hover {
+                background-color: $mainColor;
+                img {
+                    opacity: 0.2;
+                    z-index: 0;
+                }
+            }
+        }
+    }
 }
