--- a/src/components/creations/creations.scss
+++ b/src/components/creations/creations.scss
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-
 }
 
 @media only screen and (min-width: 601px) {
@@ -17,41 +16,116 @@
     .container {
         width: 70%;
         display: flex;
-        align-items: center;
         justify-content: center;
         flex-wrap: wrap;
+        padding-top: 15px;
 
-        .item {
-            width: 220px;
-            height: 150px;
-            border-radius: 20px;
-            border: 1px solid $textColor;
-            margin: 10px 20px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: $textColor;
-            position: relative;
-            cursor: pointer;
+        .whole-item {
+            margin: 0px 20px;
+            padding-bottom: 30px;
 
-            h3 {
-                position: absolute;
-                font-size: 18px;
-            }
-    
-            img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                z-index: 1;
-            }
+            .item {
+                width: 220px;
+                height: 150px;
+                border-radius: 20px;
+                border: 1px solid $textColor;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $textColor;
+                position: relative;
+                transition: all 0.5 ease;
+                cursor: pointer;
 
-            &:hover {
-                background-color: $mainColor;
-                img {
-                    opacity: 0.2;
-                    z-index: 0;
+                h3 {
+                    position: absolute;
+                    font-size: 18px;
                 }
+        
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    z-index: 1;
+                }
+
+                &:hover {
+                    background-color: $mainColor;
+                    img {
+                        opacity: 0.1;
+                        z-index: 0;
+                    }
+                }
+            }
+
+            span {
+                width: 220px;
+                display: block;
+                font-size: 14px;
+                text-align: center;
+                padding-top: 5px;
+            }
+        }
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .banner {
+        text-align: center;
+        padding-top: 15%;
+        font-size: 18px;
+    }
+    .container {
+        width: 70%;
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        padding-top: 30px;
+
+        .whole-item {
+            margin: 0px 20px;
+            padding-bottom: 30px;
+
+            .item {
+                width: 220px;
+                height: 120px;
+                border-radius: 20px;
+                border: 1px solid $textColor;
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                color: $textColor;
+                position: relative;
+                transition: all 0.5 ease;
+                cursor: pointer;
+
+                h3 {
+                    position: absolute;
+                    font-size: 12px;
+                }
+        
+                img {
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    z-index: 1;
+                }
+
+                &:hover {
+                    background-color: $mainColor;
+                    img {
+                        opacity: 0.1;
+                        z-index: 0;
+                    }
+                }
+            }
+
+            span {
+                width: 220px;
+                display: block;
+                font-size: 12px;
+                text-align: center;
+                padding-top: 5px;
             }
         }
     }
